# farmers-edge-server

./: .gitignore  Procfile  README.md  __main__.py  app.properties  pyproject.toml  requirements.txt
farmers/: celery.py  settings.py  urls.py  wsgi.py
farmers/api/contacts/: tasks.py  views.py
farmers/api/contacts/migrations/: 0001_initial.py
farmers/api/helpers/: serial_errors.py
farmers/api/market/: models.py  serializers.py  urls.py  views.py
farmers/api/market/migrations/: 0001_initial.py  0002_auto_20200605_1335.py  0005_order_product.py  0006_auto_20200605_1452.py  0007_remove_product_farmer.py  (+3 more)
farmers/api/tests/: register_model_test.py  tests_market.py
farmers/api/users/: api.py  emails.py  managers.py  models.py  reset_generator.py  serializers.py  signals.py  tasks.py  urls.py  urlss.py  views.py
src/farmer/: db.sqlite3  manage.py
src/farmer/farmer/: asgi.py  settings.py  urls.py  wsgi.py
src/farmer/users/: admin.py  forms.py  models.py  serializers.py  views.py
src/farmers/: db.sqlite3  manage.py  pytest.ini
src/farmers/contacts/: emails.py  models.py  serializers.py  urls.py  views.py
src/farmers/farmers/: asgi.py  celery.py  settings.py  urls.py
src/farmers/market/: admin.py  models.py  serializers.py  urls.py  views.py
src/farmers/tests/: register_model_test.py
src/farmers/users/: __init__.py  api.py  apps.py  emails.py  models.py  reset_generator.py  reset_urls.py  serializers.py  signals.py  tasks.py  token_generator.py  urls.py  urlss.py  views.py
tests/: contacts_create.py  register_model_test.py
(+52 files in other folders)
